--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -391,7 +391,8 @@ background-color: white;
 }
 
 .foto_cancha{
-  width: 100%;
+      width: 100%;
+    /*padding: 10px 0px 10px 0px;*/
 }
 
 .foto_publicacion{
@@ -424,7 +425,9 @@ background-color: white;
 
 input.btn.btn-primary.btn-block
 {
-      background-image: linear-gradient(to bottom,#227170 0,#227170 100%);
+      /*background-image: linear-gradient(to bottom,#227170 0,#227170 100%);*/
+      background-image: linear-gradient(to bottom,#228d87 0,#228d87 100%); 
+      background-color: #1e7772e8 !important;
 }
 
 .far{
@@ -469,7 +472,7 @@ iframe{
 
 .slide_div_titulo{
 
-      top: 10%;
+      top: 15%;
     background-color: #228c85d4;
     padding: 20px;
     position: absolute;
@@ -479,6 +482,7 @@ iframe{
     -webkit-border-radius: 10px;
 -moz-border-radius: 10px;
 border-radius: 10px;
+    border: 1px solid #247373;
 
 }
 
@@ -493,5 +497,83 @@ border-radius: 10px;
 }
 
 .slide_descripcion{
+  font-size: 15px; 
+}
+
+
+a[class="nav-link js-scroll-trigger"] 
+{ 
   font-size: 13px; 
+  color: #000;  
+  padding: 10px 10px;
+}
+
+a:hover[class="nav-link js-scroll-trigger"] 
+{ 
+  color: #228d87 !important;
+  padding: 10px 10px;
+    
+}
+
+a.nav-link.js-scroll-trigger.active{
+  border-bottom: 3px solid #228d87;
+  font-size: 13px;
+  padding: 10px 10px;
+  color: #000;  
+}
+
+#carousel-inner {
+    height: 600px !important;
+}
+
+
+.slide{
+  /*width: 200px;*/
+}
+
+div.parent{
+  margin-top: 0px;
+}
+
+
+/*Mobile*/
+
+@media only screen and (max-width: 768px) 
+{
+    
+
+  #carousel-inner 
+  {
+    height: auto !important;
+
+  }
+
+  .slide_div_titulo
+  {
+    padding:10PX;
+    margin: 5px;
+    left: 0px;
+  }
+
+  .slide_titulo1 {
+    font-size: 14px;
+  }
+
+   .slide_titulo2 {
+    font-size: 20px;
+  }
+
+  .titulo{
+    line-height: 1.2;
+    font-size: 30px;
+  }
+
+  .seccion{
+    padding-top: 40px;
+  }
+
+  .navbar-toggle { 
+      background-color: #2c8787;
+  }
+
 }
